--- a/docs/02.赞助/01.赞助.md
+++ b/docs/02.赞助/01.赞助.md
@@ -11,7 +11,7 @@ article: false
 1. Star并分享 [KCloud-Platform-IoT](https://github.com/KouShenhai/KCloud-Platform-IoT) :rocket:
 2. 通过以下二维码 一次性捐款，打赏作者一杯茶。:tea:
 
-<img :src="$withBase('/img/qrcode/wxzf.png')" alt="Wechat Pay QRcode" width=180>
+<img :src="$withBase('/img/二维码/wxzf.png')" alt="Wechat Pay QRcode" width=180>
 
 谢谢！ :heart:
 
@@ -25,6 +25,18 @@ article: false
         <th>网名</th>
         <th>金额</th>
         <th>备注</th>
+    </tr>
+    <tr>
+        <td>2024/08/01</td>
+        <td>*ckai</td>
+        <td>￥88.00</td>
+        <td>加油~</td>
+    </tr>
+    <tr>
+        <td>2024/04/19</td>
+        <td>*保熟</td>
+        <td>￥188.00</td>
+        <td>越做越好</td>
     </tr>
     <tr>
         <td>2024/03/20</td>
@@ -45,6 +57,12 @@ article: false
         <td>无</td>
     </tr>
     <tr>
+        <td>2023/12/22</td>
+        <td>*民</td>
+        <td>服务器</td>
+        <td>无</td>
+    </tr>
+    <tr>
         <td>2023/12/08</td>
         <td>*来</td>
         <td>￥10</td>
@@ -57,10 +75,10 @@ article: false
         <td>越来越好，继续干下去</td>
     </tr>
     <tr>
-        <td>2023/08/27</td>
-        <td>*界</td>
-        <td>￥10</td>
-        <td>希望越来越好</td>
+        <td>2023/10/07</td>
+        <td>何*</td>
+        <td>￥399</td>
+        <td>作者说：感谢支持</td>
     </tr>
     <tr>
         <td>2023/08/27</td>
