--- a/docs/01.指南/03.快速上手/01.项目启动.md
+++ b/docs/01.指南/03.快速上手/01.项目启动.md
@@ -1,5 +1,5 @@
 ---
-title: 项目启动（傻瓜式教程）
+title: 项目启动
 date: 2023-09-26 12:20:19
 permalink: /pages/10bfa7/
 ---
@@ -17,7 +17,6 @@ permalink: /pages/10bfa7/
 
 ## 视频地址
 [老寇云平台-项目演示视频](https://www.bilibili.com/video/BV16M411C7v7)   
-[老寇云平台-十分钟启动项目](https://www.bilibili.com/video/BV1AM4m1z7rS)    
 
 ## 项目运行（请一定按照作者的步骤来）
 🚀 注意：之前创建的数据库统统删掉（与该项目相关的数据库）
@@ -38,19 +37,19 @@ permalink: /pages/10bfa7/
     </tr>
     <tr>
         <td>Postgresql</td>
-        <td>16.3</td>
+        <td>16.3+</td>
     </tr>
     <tr>
         <td>Redis</td>
-        <td>7.2.x</td>
+        <td>7.2.0+</td>
     </tr>
     <tr>
         <td>Elasticsearch</td>
-        <td>8.13.x</td>
+        <td>8.13.1+</td>
     </tr>
     <tr>
         <td>RocketMQ</td>
-        <td>5.2.x</td>
+        <td>5.2.0+</td>
     </tr>
 </table>
 
@@ -65,9 +64,8 @@ permalink: /pages/10bfa7/
 127.0.0.1 postgresql.laokou.org
 127.0.0.1 nginx.laokou.org
 127.0.0.1 nacos.laokou.org
-127.0.0.1 seata.laokou.org
 127.0.0.1 kafka.laokou.org
-127.0.0.1 powerjob.laokou.org
+127.0.0.1 snail.job.laokou.org
 127.0.0.1 sentinel.laokou.org
 127.0.0.1 monitor.laokou.org
 127.0.0.1 gateway.laokou.org
@@ -106,40 +104,46 @@ mvn clean install -P test
 <img src="/img/5/img_23.png"/>
 
 🚀 必须运行laokou-register，启动单机Nacos（需要配置VM Option）  
-<img src="/img/5/img_5.png"/>  
-<img src="/img/5/img_6.png"/>  
+<img src="/img/5/img_5.png"/>
+
+<font color="red">nacos开启grpc tls认证，需要增加如下参数</font>
+```shell
+-Xmx256m
+-Xms256m
+-Dnacos.standalone=true
+-Dnacos.home=./logs
+-Dnacos.remote.server.rpc.tls.enableTls=true
+-Dnacos.remote.server.rpc.tls.mutualAuthEnable=true
+-Dnacos.remote.server.rpc.tls.compatibility=false
+-Dnacos.remote.server.rpc.tls.certChainFile=nacos-server-cert.pem
+-Dnacos.remote.server.rpc.tls.certPrivateKey=nacos-server-key.pem
+-Dnacos.remote.server.rpc.tls.trustCollectionCertFile=nacos-ca-cert.pem
+-Dnacos.remote.server.rpc.tls.certPrivateKeyPassword=laokou123
+```
+<img src="/img/5/img_6.png"/>
 
 🚀 打开Nacos控制台，创建命名空间（如有需要自行修改即可）  
 <img src="/img/5/img_7.png"/>
 
-🚀 修改```seataServer.properties```
-<img src="/img/5/img_3.png"/>
-<img src="/img/5/img_4.png"/>
-
-🚀 必须运行seata  
-<img src="/img/5/img_11.png"/>
-
-🚀 依次运行laokou-gateway、laokou-admin、laokou-auth、laokou-im（必须运行）
-<img src="/img/5/img_12.png"/>   
-
-🚀 提醒：每个注册nacos的服务都需要在vm option增加参数
+🚀 提醒：每个注册nacos的服务都需要在vm option增加参数【开启nacos grpc tls认证，需要增加如下参数】
 ```shell
--Dtls.enable=true
--Dtls.client.authServer=true
--Dtls.client.trustCertPath=d:\\nacos.crt
+-Xms256m
+-Xmx256m
+-Dlog4j.skipJansi=false
+-Dnacos.remote.client.rpc.tls.enable=true
+-Dnacos.remote.client.rpc.tls.mutualAuth=true
+-Dnacos.remote.client.rpc.tls.certChainFile=nacos-client-cert.pem
+-Dnacos.remote.client.rpc.tls.certPrivateKey=nacos-client-key.pem
+-Dnacos.remote.client.rpc.tls.trustCollectionChainPath=nacos-ca-cert.pem
+-Dnacos.remote.client.rpc.tls.certPrivateKeyPassword=laokou123
 ```
-<img src="/img/5/img_27.png"/>
+<img src="/img/5/img_30.png"/>
 
-`nacos.crt` 位置，见如下图  
-<img width="100" height="200" src="/img/5/img_29.png"/>
+🚀 依次运行laokou-snail-job、 laokou-gateway、laokou-admin、laokou-auth（必须运行）
 
 🚀 运行完laokou-gateawy 需要运行路由同步脚本
 <img src="/img/5/img_2.png"/>
-<img src="/img/5/img_28.png"/>  
-<img src="/img/5/img_14.png"/>
-<img src="/img/5/img_13.png"/>  
-<img src="/img/5/img_14.png"/>  
-<img src="/img/5/img_15.png"/>
+<img src="/img/5/img_28.png"/>
 
 🚀 按需要运行laokou-monitor（不使用服务监控可以不启动），还有就是别用老夫的邮箱，求求你们改一改吧    
 <img src="/img/5/img_25.png"/>
@@ -163,5 +167,8 @@ mvn clean install -P test
     </mirror>
 </mirrors>
 ```
+
+### 3.如何生成服务端和客户端证书
+解决方案见 [服务端和客户端证书](/pages/10bfa8/#服务端和客户端证书)
 
 我是老寇，我们下次再见啦！  
