--- a/docs/01.指南/05.后端指南/01.SSL证书.md
+++ b/docs/01.指南/05.后端指南/01.SSL证书.md
@@ -311,6 +311,50 @@ keytool -exportcert -v
 <img src="/img/6/img_6.png"/>   
 <img src="/img/6/img_7.png"/>
 
+## 服务端和客户端证书
+```shell
+ => laokou123【密码】
+ => zh【国家】
+ => laokouyun【地区、组织、名称】
+ => 2413176044@qq.com【邮箱】
+
+---开始---nacos-ca---开始---
+
+注意：Country Name,State or Province Name,Organization Name
+
+生成CA私钥：openssl genrsa -out nacos-ca-key.pem -aes128 2048
+
+生成CA证书：openssl req -new -x509 -key nacos-ca-key.pem -out nacos-ca-cert.pem -days 3650
+
+---结束---nacos-ca---结束---
+
+
+---开始---nacos-server-cert---开始---
+
+生成私钥：openssl genrsa -out nacos-server-key.pem -aes128 2048
+
+生成签名：openssl req -new -key nacos-server-key.pem -out nacos-server-csr.pem
+
+生成证书：openssl ca -in nacos-server-csr.pem -cert nacos-ca-cert.pem -keyfile nacos-ca-key.pem -out nacos-server-cert.pem -days 3650
+
+报错修改：根据报错提醒创建/CA/newcerts并授权，创建index.txt和serial并写入01
+
+---结束---nacos-server-cert---结束---
+
+
+---开始---nacos-client-cert---开始---
+
+生成私钥：openssl genrsa -out nacos-client-key.pem -aes128 2048
+
+生成签名：openssl req -new -key nacos-client-key.pem -out nacos-client-csr.pem
+
+生成证书：openssl ca -in nacos-client-csr.pem -cert nacos-ca-cert.pem -keyfile nacos-ca-key.pem -out nacos-client-cert.pem -days 3650
+
+报错修改：根据报错提醒创建/CA/newcerts并授权，创建index.txt和serial并写入01
+
+---结束---nacos-client-cert---结束---
+```
+
 我是老寇，我们下次再见啦！  
 
 ## 参考资料
