--- a/docs/01.指南/03.快速上手/01.项目启动.md
+++ b/docs/01.指南/03.快速上手/01.项目启动.md
@@ -89,7 +89,7 @@ git clone https://github.com/KouShenhai/KCloud-Platform-IoT.git
 
 🚀 项目打包，确保项目能正常编译(先在test环境能正常打包，生产环境需要prod，默认使用maven插件跳过测试用例)   
 
-注意：项目根目录下执行（推荐test环境，dev是http，test是https，prod是https+kafka分布式链路）  
+<font color="red">注意：项目根目录下执行（推荐test环境，dev是http，test是https，prod是https+kafka分布式链路）</font>
 
 ```shell
 mvn clean install -P test
