--- a/docs/01.指南/05.后端指南/02.一键修改项目模块.md
+++ b/docs/01.指南/05.后端指南/02.一键修改项目模块.md
@@ -5,7 +5,7 @@ permalink: /pages/10bfa9/
 ---
 
 你好呀，我的老朋友！我是老寇，欢迎来到老寇云平台！  
-话不多说，跟我修改项目模块！
+话不多说，讲一讲一键修改项目模块！
 
 <img src="/img/一键修改项目模块/img.png"/>
 
