--- a/docs/01.指南/05.后端指南/06.项目部署之镜像打包与推送.md
+++ b/docs/01.指南/05.后端指南/06.项目部署之镜像打包与推送.md
@@ -3,3 +3,83 @@ title: 项目部署之镜像打包与推送
 date: 2024-08-19 12:43:30
 permalink: /pages/61389d/
 ---
+
+你好呀，我的老朋友！我是老寇，欢迎来到老寇云平台！  
+话不多说，讲一讲项目部署之镜像打包与推送！
+
+### 安装插件
+```shell
+<!-- 打包插件，将 Java 源代码编译为字节码（.class 文件） -->
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <version>3.13.0</version>
+  <configuration>
+    <source>21</source>
+    <target>21</target>
+    <encoding>UTF-8</encoding>
+    <!--  -->
+    <compilerArgs>
+      <arg>-Xlint:-options</arg>
+      <arg>-Xlint:varargs</arg>
+      <arg>-Xlint:rawtypes</arg>
+      <arg>-Xlint:unchecked</arg>
+      <arg>-Xlint:deprecation</arg>
+      <arg>-parameters</arg>
+    </compilerArgs>
+  </configuration>
+</plugin>
+
+<!-- 专门用于 Spring Boot 应用的打包和运行，提供打包为可执行 JAR/WAR 文件的功能，还可以在开发过程中直接运行应用 -->
+<plugin>
+  <groupId>org.springframework.boot</groupId>
+  <artifactId>spring-boot-maven-plugin</artifactId>
+  <version>3.3.2</version>
+  <configuration>
+    <finalName>${project.artifactId}</finalName>
+    <!-- main方法的地址 只需要修改这个地址-->
+    <mainClass>xxx.xxx.xxx.XxxApp</mainClass>
+  </configuration>
+  <executions>
+    <execution>
+      <goals>
+        <goal>repackage</goal>
+      </goals>
+    </execution>
+  </executions>
+</plugin>
+
+<!-- 用于将项目打包为 Docker 镜像的插件 -->
+
+
+<!-- profile对资源的操作 -->
+<resources>
+  <!-- 打包的时候先去掉所有的配置文件 -->
+  <resource>
+    <directory>src/main/resources</directory>
+    <excludes>
+      <exclude>application*.yml</exclude>
+      <exclude>bootstrap*.yml</exclude>
+      <exclude>log4j2*.xml</exclude>
+      <exclude>*.json</exclude>
+      <exclude>*.properties</exclude>
+    </excludes>
+  </resource>
+  <!-- 添加需要包含的文件 -->
+  <resource>
+    <directory>src/main/resources</directory>
+    <!-- 是否替换yml或者properties里@xx@表示的maven properties属性值 -->
+    <filtering>true</filtering>
+    <!-- 在打包的时候，根据-P参数，加上需要的yml配置文件 -->
+    <includes>
+      <include>application.yml</include>
+      <include>application-${PROFILE-ACTIVE}.yml</include>
+      <include>bootstrap.yml</include>
+      <include>bootstrap-${PROFILE-ACTIVE}.yml</include>
+      <include>log4j2-${PROFILE-ACTIVE}.xml</include>
+      <include>init_router.json</include>
+      <include>log4j2.component.properties</include>
+    </includes>
+  </resource>
+</resources>
+```
